--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,8 +50,8 @@
         <h6>Admin kullanıcı sistemde neler yapabilir ? / What can the admin user do in the system? </h6>
         <p class="card-text">User kullanıcının tüm yetkilerine sahiptir. Ancak sistemde silme rolü sadece admin kullanıcısına verilmiştir. </p>
         <p class="card-text">Admin user has all privileges of the user. However, the delete role in the system is given only to the admin user.</p>
-       <p class="card-text">Kullanılan teknolojiler: Spring Boot + Spring MVC + Spring Security + JPA/Hibernate + MySQL</p>
-        <p class="card-text">Used technologies: Spring Boot + Spring MVC + Spring Security + JPA/Hibernate + MySQL</p>
+       <p class="card-text">Kullanılan teknolojiler: Spring Boot + Spring MVC + Spring Security + JPA/Hibernate + MySQL + Maven + HTML + Thymeleaf</p>
+        <p class="card-text">Used technologies: Spring Boot + Spring MVC + Spring Security + JPA/Hibernate + MySQL + Maven + HTML + Thymeleaf</p>
 
       </div>
 
